# sqlalchimy

./: main.py  pyproject.toml  sqlalchemy_test.db
app/db/: base.py  models.py
